Fix broken index.php
This was partially reverted, no idea how

--- a/packages/portfolio/src/style.css
+++ b/packages/portfolio/src/style.css
@@ -58,6 +58,7 @@ a:hover {
 }
 
 .video {
+  border: none;
   display: block;
   margin: 0 auto;
 }
